--- a/archives/zhihu-questions/2023-12-28.md
+++ b/archives/zhihu-questions/2023-12-28.md
@@ -1,27 +1,27 @@
 # 2023-12-28
 
-共 55 条
+共 57 条
 
 <!-- BEGIN ZHIHUQUESTIONS -->
-<!-- 最后更新时间 Thu Dec 28 2023 01:00:44 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Thu Dec 28 2023 02:00:36 GMT+0800 (China Standard Time) -->
 1. [「包租公」举报诡异绿光，获得重大奖励，哪些情况需要注意？举报间谍活动有哪些途径？](https://www.zhihu.com/question/636856149)
 1. [首艘国产航母研制总指挥一审过堂，获刑 13 年，造成国有资产特别重大损失，如何看待此事？](https://www.zhihu.com/question/636851385)
 1. [《寄生虫》主演李善均确认死亡，疑烧炭自杀，曾因涉毒 3 次接受调查，哪些信息需要关注？](https://www.zhihu.com/question/636861372)
 1. [如何评价王家卫执导，胡歌、马伊琍、唐嫣、辛芷蕾主演的电视剧《繁花》？](https://www.zhihu.com/question/636908871)
 1. [你相信《滕王阁序》是王勃当场即兴发挥写的吗？这样的文章不是昨晚写好的？](https://www.zhihu.com/question/632448264)
 1. [日方拟将被中国禁止进口扇贝出口至韩国和欧盟，韩国政府表示韩方将保持进口管制，如何看待此事？](https://www.zhihu.com/question/636882571)
-1. [乘坐过很多次飞机，也了解空气动力学；但是看到上百吨的飞机飞上天，为什么还是觉得不可思议?](https://www.zhihu.com/question/552604807)
 1. [哈马斯拒绝埃及的提议，即放弃对加沙地带的控制以换取永久停火，释放了什么信号？](https://www.zhihu.com/question/636684571)
-1. [钱可以左右人的生活吗？](https://www.zhihu.com/question/610031701)
 1. [汽车 3.0 时代，小米造车，与华为终有一战？你更看好谁？](https://www.zhihu.com/question/636887811)
-1. [加拿大鹅援助震区羽绒服疑被挂闲鱼倒卖，官方回应「网上流传的情况不属实」，如何看待此事？](https://www.zhihu.com/question/636721136)
 1. [台积电、三星接连宣布将美国新工厂大规模生产推迟到 2025 年，原因有哪些？](https://www.zhihu.com/question/636933464)
+1. [极氪007的预售价22.99万元，值不值得入手？](https://www.zhihu.com/question/630549649)
+1. [加拿大鹅援助震区羽绒服疑被挂闲鱼倒卖，官方回应「网上流传的情况不属实」，如何看待此事？](https://www.zhihu.com/question/636721136)
 1. [大学（警校）不允许穿羽绒服，学生冷生病了可以起诉老师吗？](https://www.zhihu.com/question/635381771)
 1. [国内有充绒量500g以上的鹅绒羽绒服么？](https://www.zhihu.com/question/635952230)
-1. [极氪007的预售价22.99万元，值不值得入手？](https://www.zhihu.com/question/630549649)
 1. [中国女游客滑雪时不幸身亡，雪场工作人员批露细节，具体情况如何？滑雪需注意什么？](https://www.zhihu.com/question/636423960)
-1. [如何透过那些花哨的噱头，精准挑选到「真正实在」的家电？](https://www.zhihu.com/question/562522347)
+1. [如何评价《咒术回战》第247话 ？](https://www.zhihu.com/question/636888288)
 1. [上班摸鱼的人是怎么想的？](https://www.zhihu.com/question/356636392)
+1. [如何透过那些花哨的噱头，精准挑选到「真正实在」的家电？](https://www.zhihu.com/question/562522347)
+1. [2023 年你的年度 top 10 电视剧是哪些？为什么？](https://www.zhihu.com/question/634206336)
 1. [这一年，你有没有经历「不一定能看到结果的坚持」？那是一种怎样的体验？](https://www.zhihu.com/question/633185211)
 1. [能说说自己的交易经历吗？](https://www.zhihu.com/question/510378106)
 1. [2024考研结束了，后续如何进行准备安排?](https://www.zhihu.com/question/636435708)
@@ -47,12 +47,14 @@
 1. [下周起贷款即将重定价，部分存量房贷利率还可再降 10 个基点，将带来哪些影响？](https://www.zhihu.com/question/636906854)
 1. [全国人大法工委称「地方全面禁放烟花规定需修改」，如何评价此事？你支持「禁燃」吗？](https://www.zhihu.com/question/636858312)
 1. [中国证券集体诉讼和解第一案生效，7195 名投资者获超 2.8 亿元全额赔偿，哪些信息值得关注？](https://www.zhihu.com/question/636719304)
+1. [乘坐过很多次飞机，也了解空气动力学；但是看到上百吨的飞机飞上天，为什么还是觉得不可思议?](https://www.zhihu.com/question/552604807)
 1. [2023中科院分区已经发布，如何评价？](https://www.zhihu.com/question/636905312)
 1. [《崩坏：星穹铁道》在「阮·梅」的角色设计上有什么细节？](https://www.zhihu.com/question/636856435)
 1. [人这一辈子，究竟什么才是最重要的?](https://www.zhihu.com/question/632384620)
 1. [无限个小于1的正数的乘积一定是0吗？](https://www.zhihu.com/question/636532861)
 1. [非洲人为什么不打井？](https://www.zhihu.com/question/263961507)
 1. [你有哪些想留在 2023 年的问题，对明年有哪些期待？](https://www.zhihu.com/question/633946474)
+1. [钱可以左右人的生活吗？](https://www.zhihu.com/question/610031701)
 1. [如何评价《繁花》首播的前四集？](https://www.zhihu.com/question/636946399)
 1. [在如今的社会环境中，我们需要什么样的女性角色？](https://www.zhihu.com/question/636497861)
 1. [如何评价米哈游《崩坏星穹铁道》1.6任务《庸与神的冠冕》？](https://www.zhihu.com/question/636847956)
